<resources>
    <string name="app_name">GPC Notifier</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="log_in">Log In</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_new_account">Create new account</string>
    <string name="lectural">Lecturer</string>
    <string name="student">Student</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="enrollment_number">Enrollment number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="re_type_password">Re-Type-Password</string>
    <string name="gpc_notifier">GPC Notifier</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="principal">Principal</string>
    <string name="designation">Designation</string>
    <string name="department">Department</string>
    <string name="mech">MECH</string>
    <string name="ele">ELE</string>
    <string name="comp">COMP</string>
    <string name="forget_password">Forget Password</string>
    <string name="already_have_an_account">Already have an Account ..</string>
    <string name="non">None</string>
    <string name="third_year">Third Year</string>
    <string name="second_year">Second Year</string>
    <string name="first_year">First Year</string>
    <string name="class1">Class</string>
    <string name="fy">FY</string>
    <string name="sy">SY</string>
    <string name="ty">TY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">All</string>
    <string name="staff">Staff</string>

</resources>
