<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sid.gpcnotifier.Logins"    android:background="@color/colorPrimary"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/log_in"
            android:textColor="@color/button"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/etusername1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/button"
            android:hint="@string/mobile_no"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true" />
        <EditText
            android:id="@+id/etpassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/button"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true" />
        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:background="@color/button"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimary" />
        <TextView
            android:id="@+id/tvreg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/button"
            android:textSize="18sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>